# rust_study1

./: Cargo.toml
src/: main.rs
