[package]
name = "rust1"
version = "0.1.0"
authors = ["iamzko <iamzko@126.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cv = { git = "https://github.com/rust-cv/cv.git" }
imgshow = { git = "https://github.com/rust-cv/cv.git" }
image = "0.23.7"
imageproc = "0.21.0"
rand = "0.7.3"
csv = "1.1"
tinyfiledialogs = "3.3.10"